--- a/index.html
+++ b/index.html
@@ -29,15 +29,13 @@
                 class="btn btn-primary shadow-none font-weight-bold mx-2 text-nowrap d-none d-md-block ml-lg-5">Write a
                 post</button>
             <a class="navbar-brand rounded-circle top-icons p-1 d-flex align-items-center" href="#">
-                <img src="/images/nav/post-icon.png" class="rounded-circle" alt="Connect" loading="lazy">
+                <img src="images/post-icon.png" class="rounded-circle" alt="Connect" loading="lazy">
             </a>
             <a class="navbar-brand rounded-circle top-icons p-1 d-flex align-items-center" href="#">
-                <img src="/images/nav/notification-icon.png" class="rounded-circle" alt="Notifications" loading="lazy">
+                <img src="images/notification-icon.png" class="rounded-circle" alt="Notifications" loading="lazy">
             </a>
-            <div class="navbar-brand rounded-circle top-icons p-1 d-flex align-items-center dropdown">
-                <img src="/images/nav/perfil-icon.png" class="rounded-circle" alt="Perfil" loading="lazy">
-                <div class="dropdown">
-                    <img src="/resources/aside1/profile.PNG " alt="" height="30" width="30" class="rounded-circle ml-3">
+            <div class="dropdown">
+                    <img src="images/perfil-icon.png" alt="" height="30" width="30" class="rounded-circle ml-3">
                     <div class="dropdown-content rounded border border-dark">
                         <a href="#">NajeraDev <br> @najeradev</a>
                         <a href="#">Dashboard</a>
