--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
      
 
-    <!-- Este es el elemento en el que vamos a trabajar Toño, Pako y JP -->
+    <!-- Este es el aside-izq, main y aside-der -->
 
     <div class="container-fluid contenedor-padre">
       <div class="row">
@@ -72,6 +72,10 @@
         </div>
       </div>
     </div>
+
+    <footer>
+        <!-- Agregar footer -->
+    </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
