--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
     <!-- Este es el elemento fixed (header) -->
-    <nav class="navbar fixed-top navbar-light bg-light shadow-sm p-1 mb-5 bg-white rounded">
+    <!-- <nav class="navbar fixed-top navbar-light bg-light shadow-sm p-1 mb-5 bg-white rounded">
         <div class="container nav-top">
             <a class="navbar-brand" href="#">
                 <i class="pl-1 fab fa-dev" title="dev"></i>
@@ -51,7 +51,7 @@
     </nav>
    
 
-     
+      -->
 
     <!-- Este es el aside-izq, main y aside-der -->
 
@@ -59,8 +59,137 @@
       <div class="row">
         <div class="container">
           <div class="row">
-            <div class="d-none d-md-block col-md-3 ">
+            <div class="d-none d-md-block col-md-3 " id="aside-izquierdo">
               <!-- Emma -->
+              <div class="login mb-3 d-flex">
+                <img src="/images/aside1/prision-mike.png " alt="profile" class="profile mr-2">
+                <div class="informacion d-flex flex-column">
+                    <h5 class="najeradev">NajeraDev</h5>
+                    <p class="arroba">@najeradev</p>
+                </div>
+              </div>
+              <div class="d-flex flex-column justify-content-between icon-list aside-izq">
+                <a href="#" class="list-aside">
+                    <span class="">
+                        <img  src="images/aside1/losbuenos/drawer.svg " alt="">
+                    </span>
+                    Reading List
+                    
+                </a>
+                <a href="#" class="list-aside">
+                    <span class="">
+                        <img src="images/aside1/losbuenos/listing.svg" alt="">
+                    </span>
+                    Listing
+                </a>
+                <a href="#" class="list-aside">
+                    <span class="">
+                        <img src="images/aside1/losbuenos/mic.svg" alt="">
+                    </span>
+                    Potcasts
+                </a>
+                <a href="#" class="list-aside">
+                    <span class="">
+                        <img src="images/aside1/losbuenos/camera.svg" alt="">
+                    </span>
+                    Videos
+                </a>
+                <a href="#" class="list-aside">
+                    <span class="">
+                        <img src="images/aside1/losbuenos/tag.svg" alt="">
+                    </span>
+                    Tags
+                </a>
+            </div>
+              <div class="d-flex flex-column justify-content-between" id="accordion">
+                <div class="">
+                    <div class="" id="headingOne">
+                        <h5 class="mb-0 desapear_button">
+                            <button class="btn btn-link more_button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            More...
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                    <div class="d-flex flex-column icon_collapse">
+                        <a href="#" class="list-aside">
+                            <span class="">
+                                <img src="images/aside1/losbuenos/thumb-up.svg" alt="">
+                            </span>
+                            Code of conduct
+                        </a>
+                        <a href="#" class="list-aside">
+                            <span class="">
+                                <img src="images/aside1/losbuenos/bulb.svg" alt="">
+                            </span>
+                            FAQ
+                        </a>
+                        <a href="#" class="list-aside">
+                            <span class="">
+                                <img src="images/aside1/losbuenos/shopping.svg" alt="">
+                            </span>
+                            DEV Shop
+                        </a>
+                        <a href="#" class="list-aside">
+                            <span class="">
+                                <img src="images/aside1/losbuenos/heart.svg" alt="">
+                            </span>
+                            Sponsors
+                        </a>
+                        <a href="#" class="list-aside">
+                            <span class="">
+                                <img class="rainbowdev" src="images/aside1/losbuenos/rainbowdev.svg" alt="">
+                            </span>
+                            About
+                        </a>
+                        <a href="#" class="list-aside">
+                            <span class="">
+                                <img src="images/aside1/losbuenos/smart.svg" alt="">
+                            </span>
+                            Privacy Policy
+                        </a>
+                        <a href="#" class="list-aside">
+                            <span class="">
+                                <img src="images/aside1/losbuenos/look.svg" alt="">
+                            </span>
+                            Terms of use
+                        </a>
+                        <a href="#" class="list-aside">
+                            <span class="">
+                                <img src="images/aside1/losbuenos/contact.svg" alt="">
+                            </span>
+                            Contact
+                        </a>
+                        <div class="redes-nav">
+                    <a href=""><img src="/images/aside1/twitter.svg" alt=""></a>
+                    <a href=""><img src="/images/aside1/facebook.svg" alt=""></a>
+                    <a href=""><img src="/images/aside1/github.svg" alt=""></a>
+                    <a href=""><img src="/images/aside1/instagram.svg" alt=""></a>
+                    <a href=""><img src="/images/aside1/twitch.svg" alt=""></a>
+                  </div>
+                </div>
+                </div>
+            </div>
+        </div>
+
+             <div class="my-tags d-flex justify-content-between mt-5">
+             <h4>My Tags</h4>
+             <a href=""><img src="/images/aside1/losbuenos/cog.svg" alt="cog" class="cog"></a>
+            </div>
+            <div class="my-tags-list d-flex flex-column mt-3 mb-5">
+                <a href="#" class="mt-0 mb-2">#javascript</a>
+                <a href="#" class="mt-0 mb-2">#webdev</a>
+                <a href="#" class="mt-0 mb-2">#beginners</a>
+                <a href="#" class="mt-0 mb-2">#python</a>
+                <a href="#" class="mt-0 mb-2">#css</a>
+                <a href="#" class="mt-0 mb-2">#git</a>
+                <a href="#" class="mt-0 mb-2">#vscode</a>
+                <a href="#" class="mt-0 mb-2">#gamedev</a>
+            </div>
+            <div class="imagen">
+            <img src="/images/aside1/losbuenos/merch.jpeg" alt="merch" class="mt-3 mb-3 merch">
+            <h4 class="merch-text"> <strong> Do you have your superawesome T-shirt yet?</strong></h4>
+            </div>
             </div>
             <div class="columnas col-12 col-md-9 col-lg-6 ">
               <!-- Cin -->
