Changes on left aside

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <p class="arroba">@najeradev</p>
                 </div>
               </div>
-              <div class="d-flex flex-column justify-content-between icon-list aside-izq">
+              <div class="d-flex flex-column icon-list aside-izq">
                 <a href="#" class="list-aside">
                     <span class="">
                         <img  src="images/aside1/losbuenos/drawer.svg " alt="">
