Create post function

--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
         <input type="hidden" name="utf8" id="" placeholder="" autocomplete="" value="✓">
         <input class="form-control w-100" type="search" placeholder="Search..." aria-label="Search">
       </form>
-      <button type="button"
-        class="btn btn-primary shadow-none font-weight-bold mx-2 text-nowrap d-none d-md-block ml-lg-5">Write a
-        post</button>
+      <a href="write-post.html">
+        <button type="button " 
+        class="btn btn-primary shadow-none font-weight-bold mx-2 text-nowrap d-none d-md-block ml-lg-5" id="newPost">
+        Write a post </button>
+      </a>
+      
       <a class="navbar-brand rounded-circle top-icons p-1 d-flex align-items-center" href="#">
         <img src="images/post-icon.png" class="rounded-circle" alt="Connect" loading="lazy">
       </a>
