--- a/index.html
+++ b/index.html
@@ -871,93 +871,39 @@
               </div>
             </div>
           </div>
-          <div class="d-none d-lg-block col-lg-3 ">
-            <aside class="a-2">
-              <div>
-                <div class="art-autor">
-                  <div>
-                    <a class="autor">
-                      <span>
-                        <img class="profile-random rounded-circle p-2" src="https://picsum.photos/200"
-                          alt="random-picture">
-                      </span>
-                      <span>Alan Moore</span>
-                    </a>
-                  </div>
-                  <div>
-                    Alan Moore es un escritor británico y guionista de cómics, aclamados como Watchmen, V de Vendetta,
-                    From Hell y The League of Extraordinary Gentlemen.
-                  </div>
-                  <div>
-                    <button type="button" class="btn btn-primary btn-lg btn-block btn-sm">Follow</button>
-                  </div>
-                  <div>
-                    <ul class="aside-2">
-                      <li>
-                        <div></div>
-                        <div>
-                          Escritor <span>at</span>
-                          <a href="">Comics</a>
-                        </div>
-                      </li>
-                      <li>
-                        <div>Work</div>
-                        <div>Lorem, ipsum.</div>
-                      </li>
-                      <li>
-                        <div>Location</div>
-                        <div>EUA</div>
-                      </li>
-                      <li>
-                        <div>Education</div>
-                        <div>Lorem, ipsum dolor.</div>
-                      </li>
-                      <li>
-                        <div>Joined</div>
-                        <div>1 de Abril de 2020</div>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="info-xtra-autor">
-                  <header>
-                    <h3>More form
-                      <a href="">Alan Moore</a>
-                    </h3>
-                  </header>
-                  <div>
-                    <a href="">
-                      Writer
-                      <div>
-                        <span>#Watchmen</span>
-                        <span>#Ligaextraordinaria</span>
-                        <span>#fromhell</span>
-                      </div>
-
-                    </a>
-                    <a href="">
-                      Worker
-                      <div>
-                        <span>#Watchmen</span>
-                        <span>#Ligaextraordinaria</span>
-                        <span>#fromhell</span>
-                      </div>
-
-                    </a>
-                    <a href="">
-                      Lorem
-                      <div>
-                        <span>#WLorem</span>
-                        <span>#Lorem</span>
-                        <span>#Lorem</span>
-                      </div>
-
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </aside>
-            <!-- Cris -->
+          <div class="d-none d-lg-block col-lg-3 aside-derecho">
+            <!-- Aside Derecho -->
+            <div class="card mt-5 first-section rounded mb-3" style="width: 18rem;">
+              <ul class="list-group list-group-news rounded">
+                  <h4 class="p-3"><strong> #news</strong></h4>
+                  <a href="#" class="listings1 p-3 border-top">PE offers limited scholarships from 1k to 4k for diversity and financial hardship<span>education</span><br><p class="comments mt-2"> 36 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top">Learn more than just ´coding´ Learn the entire design process:<span>education</span><br><p class="comments mt-2"> 15 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top">FCAL - Open source cross plaform calculator for programmers<span>collabs</span><br><p class="comments mt-2"> 12 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top">QA Platform Engineer<span>jobs</span><br><p class="comments mt-2"> 10 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top">💡Free Clear Explanations of Fundamental Concepts in Software - in plain english with hand-drawn illustrations<span>education</span><br><p class="comments mt-2">6 comments</p></a>
+              </ul>
+          </div>
+          <div class="card mt-5 first-section rounded mb-3" style="width: 18rem;">
+              <ul class="list-group list-group-news rounded">
+                  <h4 class="p-3"><strong> #news</strong></h4>
+                  <a href="#" class="listings1 p-3 border-top">PE offers limited scholarships from 1k to 4k for diversity and financial hardship<span>education</span><br><p class="comments mt-2"> 36 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top">Learn more than just ´coding´ Learn the entire design process:<span>education</span><br><p class="comments mt-2"> 15 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top">FCAL - Open source cross plaform calculator for programmers<span>collabs</span><br><p class="comments mt-2"> 12 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top">QA Platform Engineer<span>jobs</span><br><p class="comments mt-2"> 10 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top">💡Free Clear Explanations of Fundamental Concepts in Software - in plain english with hand-drawn illustrations<span>education</span><br><p class="comments mt-2">6 comments</p></a>
+              </ul>
+          </div>
+          <div class="card mt-5 first-section rounded mb-3" style="width: 18rem;">
+              <ul class="list-group list-group-news rounded">
+                  <h4 class="p-3"><strong> #news</strong></h4>
+                  <a href="#" class="listings1 p-3 border-top">PE offers limited scholarships from 1k to 4k for diversity and financial hardship<span>education</span><br><p class="comments mt-2"> 36 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top">Learn more than just ´coding´ Learn the entire design process:<span>education</span><br><p class="comments mt-2"> 15 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top">FCAL - Open source cross plaform calculator for programmers<span>collabs</span><br><p class="comments mt-2"> 12 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top">QA Platform Engineer<span>jobs</span><br><p class="comments mt-2"> 10 comments</p></a>
+                  <a href="#" class="listings1 p-3 border-top">💡Free Clear Explanations of Fundamental Concepts in Software - in plain english with hand-drawn illustrations<span>education</span><br><p class="comments mt-2">6 comments</p></a>
+              </ul>
+          </div>
+            
 
 
           </div>
