--- a/index.html
+++ b/index.html
@@ -1021,6 +1021,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
     crossorigin="anonymous"></script>
+  <script src="./js/library/moment.min.js" ></script>
   <script src="js/main.js"></script>
   <script src="js/write-post.js"></script>
   <!--Aqui-->
