--- a/post.html
+++ b/post.html
@@ -84,11 +84,11 @@
                         <div class="tab-content" id="pills-tabContent">
                             <div class="tab-pane fade active show" id="pills-feed" role="tabpanel" aria-labelledby="pills-feed-tab">
                                 <div class="card">
-                                    <img class="card-img-top" src="./images/articles/post.jpg" alt="Card image cap">
+                                    <img class="card-img-top" src="./images/articles/post.jpg" alt="Card image cap" id="myTopImg">
                                     <div class="card-body">
                                         <div class="content-center">
-                                            <h1 class="card-title mt-3">Functions, Parameters and Return Values</h1>
-                                            <div class="hashtags">
+                                            <h1 class="card-title mt-3" id="mytitlePage">Functions, Parameters and Return Values</h1>
+                                            <div class="hashtags" id="misHashTags">
                                                 <a href=""><span class="crayon">#</span>beginners</a>
                                                 <a href=""><span class="crayon">#</span>codenewbie</a>
                                                 <a href=""><span class="crayon">#</span>webdev</a>
@@ -96,10 +96,11 @@
                                             </div> 
                                             <span class=""><img class="profile_min" src="images/profile/p6.jpg" alt=""></span>
                                             <div class="info_personal d-inline ">
-                                                <span class="card-text name"><a class="">Teresa Holfeld</a></span>
-                                                <span class="card-text date"><a class="">Nov 2 (6 days ago)</a></span> 
+                                                <span class="card-text name"><a class="" id="nombreDeUsuario">Teresa Holfeld</a></span>
+                                                <span class="card-text date"><a class="" id="fechaDelPost">Nov 2 (6 days ago)</a></span> 
                                             </div> 
                                             <div class="content-post">
+                                                <p id="myText">Yo tengo que cambiar</p>
                                                 <h2 class="card-title mt-3">What is CSS Flexbox?</h2>
                                                 <p>
                                                     Flexbox is a web layout model that allows you to create a responsive 
@@ -605,5 +606,6 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
         <script src="js/main.js"></script>
+        <script src="js/write-post.js"></script>
 </body>
 </html>
