Add id on element

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </a>
       <form class="form-inline flex-grow-1 mr-1 mr-lg-5">
         <input type="hidden" name="utf8" id="" placeholder="" autocomplete="" value="✓">
-        <input class="form-control w-100" type="search" placeholder="Search..." aria-label="Search">
+        <input class="form-control w-100" id="searchInTitle" type="search" placeholder="Search..." aria-label="Search">
       </form>
       <a href="write-post.html">
         <button type="button "
