--- a/index.html
+++ b/index.html
@@ -243,49 +243,53 @@
 
             <div class="tab-content" id="pills-tabContent">
               <div class="tab-pane fade active show" id="pills-feed" role="tabpanel" aria-labelledby="pills-feed-tab">
-                <div class="card">
-                  <span class=""><img class="card-img-top" src="./images/articles/feed1.jpg"
-                      alt="Card image cap"></span>
+                <a href="#">
+                  <div class="card">
+                    <span class=""><img class="card-img-top" src="./images/articles/feed1.jpg"
+                        alt="Card image cap">
+                    </span>
 
 
-                  <div class="card-body">
-                    <img class="profile_min" src="images/profile/p6.jpg" alt="">
-                    <div class="info_personal d-inline-block flex-column">
-                      <span class="card-text d-block name"><a class="">Teresa Holfeld</a></span>
-                      <span class="card-text d-block date"><a class="">Nov 2 (6 days ago)</a></span>
-                    </div>
-
-                    <div class="content-center">
-                      <h1 class="card-title mt-3"> <a href="#">Functions, Parameters and Return Values</a></h1>
-                      <div class="hashtags">
-                        <a href=""><span class="crayon">#</span>beginners</a>
-                        <a href=""><span class="crayon">#</span>codenewbie</a>
-                        <a href=""><span class="crayon">#</span>webdev</a>
-                        <a href=""><span class="crayon">#</span>programming</a>
+                    <div class="card-body">
+                      <img class="profile_min" src="images/profile/p6.jpg" alt="">
+                      <div class="info_personal d-inline-block flex-column">
+                        <span class="card-text d-block name"><a class="">Teresa Holfeld</a></span>
+                        <span class="card-text d-block date"><a class="">Nov 2 (6 days ago)</a></span>
                       </div>
 
-                      <div class="card-b-content d-flex justify-content-between align-items-center">
-                        <div class="icon-right">
-                          <a href="">
-                            <img src="images/icon_cards/icono_corazon.svg" alt="">
-                            <span>8 reaction</span>
-                          </a>
-                          <a href="">
-                            <img src="images/icon_cards/icon_comment.svg" alt="">
-                            <span>Add comment</span>
-                          </a>
+                      <div class="content-center">
+                        <h1 class="card-title mt-3"> <a href="#">Functions, Parameters and Return Values</a></h1>
+                        <div class="hashtags">
+                          <a href=""><span class="crayon">#</span>beginners</a>
+                          <a href=""><span class="crayon">#</span>codenewbie</a>
+                          <a href=""><span class="crayon">#</span>webdev</a>
+                          <a href=""><span class="crayon">#</span>programming</a>
                         </div>
 
-                        <div class="icon-left">
-                          <small class="text-muted timer">1 min read</small>
-                          <button type="button" class="btn btn-less-light" onclick="clickSave(this)">
-                            Save
-                          </button>
+                        <div class="card-b-content d-flex justify-content-between align-items-center">
+                          <div class="icon-right">
+                            <a href="">
+                              <img src="images/icon_cards/icono_corazon.svg" alt="">
+                              <span>8 reaction</span>
+                            </a>
+                            <a href="">
+                              <img src="images/icon_cards/icon_comment.svg" alt="">
+                              <span>Add comment</span>
+                            </a>
+                          </div>
+
+                          <div class="icon-left">
+                            <small class="text-muted timer">1 min read</small>
+                            <button type="button" class="btn btn-less-light" onclick="clickSave(this)">
+                              Save
+                            </button>
+                          </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                </div>
+                </a>
+
 
                 <div class="card">
                   <div class="card-body">
@@ -875,35 +879,77 @@
             <!-- Aside Derecho -->
             <div class="card mt-5 first-section rounded mb-3" style="width: 18rem;">
               <ul class="list-group list-group-news rounded">
-                  <h4 class="p-3"><strong> #news</strong></h4>
-                  <a href="#" class="listings1 p-3 border-top">PE offers limited scholarships from 1k to 4k for diversity and financial hardship<span>education</span><br><p class="comments mt-2"> 36 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">Learn more than just ´coding´ Learn the entire design process:<span>education</span><br><p class="comments mt-2"> 15 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">FCAL - Open source cross plaform calculator for programmers<span>collabs</span><br><p class="comments mt-2"> 12 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">QA Platform Engineer<span>jobs</span><br><p class="comments mt-2"> 10 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">💡Free Clear Explanations of Fundamental Concepts in Software - in plain english with hand-drawn illustrations<span>education</span><br><p class="comments mt-2">6 comments</p></a>
+                <h4 class="p-3"><strong> #news</strong></h4>
+                <a href="#" class="listings1 p-3 border-top">PE offers limited scholarships from 1k to 4k for diversity
+                  and financial hardship<span>education</span><br>
+                  <p class="comments mt-2"> 36 comments</p>
+                </a>
+                <a href="#" class="listings1 p-3 border-top">Learn more than just ´coding´ Learn the entire design
+                  process:<span>education</span><br>
+                  <p class="comments mt-2"> 15 comments</p>
+                </a>
+                <a href="#" class="listings1 p-3 border-top">FCAL - Open source cross plaform calculator for
+                  programmers<span>collabs</span><br>
+                  <p class="comments mt-2"> 12 comments</p>
+                </a>
+                <a href="#" class="listings1 p-3 border-top">QA Platform Engineer<span>jobs</span><br>
+                  <p class="comments mt-2"> 10 comments</p>
+                </a>
+                <a href="#" class="listings1 p-3 border-top">💡Free Clear Explanations of Fundamental Concepts in
+                  Software - in plain english with hand-drawn illustrations<span>education</span><br>
+                  <p class="comments mt-2">6 comments</p>
+                </a>
               </ul>
-          </div>
-          <div class="card mt-5 first-section rounded mb-3" style="width: 18rem;">
+            </div>
+            <div class="card mt-5 first-section rounded mb-3" style="width: 18rem;">
               <ul class="list-group list-group-news rounded">
-                  <h4 class="p-3"><strong> #news</strong></h4>
-                  <a href="#" class="listings1 p-3 border-top">PE offers limited scholarships from 1k to 4k for diversity and financial hardship<span>education</span><br><p class="comments mt-2"> 36 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">Learn more than just ´coding´ Learn the entire design process:<span>education</span><br><p class="comments mt-2"> 15 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">FCAL - Open source cross plaform calculator for programmers<span>collabs</span><br><p class="comments mt-2"> 12 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">QA Platform Engineer<span>jobs</span><br><p class="comments mt-2"> 10 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">💡Free Clear Explanations of Fundamental Concepts in Software - in plain english with hand-drawn illustrations<span>education</span><br><p class="comments mt-2">6 comments</p></a>
+                <h4 class="p-3"><strong> #news</strong></h4>
+                <a href="#" class="listings1 p-3 border-top">PE offers limited scholarships from 1k to 4k for diversity
+                  and financial hardship<span>education</span><br>
+                  <p class="comments mt-2"> 36 comments</p>
+                </a>
+                <a href="#" class="listings1 p-3 border-top">Learn more than just ´coding´ Learn the entire design
+                  process:<span>education</span><br>
+                  <p class="comments mt-2"> 15 comments</p>
+                </a>
+                <a href="#" class="listings1 p-3 border-top">FCAL - Open source cross plaform calculator for
+                  programmers<span>collabs</span><br>
+                  <p class="comments mt-2"> 12 comments</p>
+                </a>
+                <a href="#" class="listings1 p-3 border-top">QA Platform Engineer<span>jobs</span><br>
+                  <p class="comments mt-2"> 10 comments</p>
+                </a>
+                <a href="#" class="listings1 p-3 border-top">💡Free Clear Explanations of Fundamental Concepts in
+                  Software - in plain english with hand-drawn illustrations<span>education</span><br>
+                  <p class="comments mt-2">6 comments</p>
+                </a>
               </ul>
-          </div>
-          <div class="card mt-5 first-section rounded mb-3" style="width: 18rem;">
+            </div>
+            <div class="card mt-5 first-section rounded mb-3" style="width: 18rem;">
               <ul class="list-group list-group-news rounded">
-                  <h4 class="p-3"><strong> #news</strong></h4>
-                  <a href="#" class="listings1 p-3 border-top">PE offers limited scholarships from 1k to 4k for diversity and financial hardship<span>education</span><br><p class="comments mt-2"> 36 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">Learn more than just ´coding´ Learn the entire design process:<span>education</span><br><p class="comments mt-2"> 15 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">FCAL - Open source cross plaform calculator for programmers<span>collabs</span><br><p class="comments mt-2"> 12 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">QA Platform Engineer<span>jobs</span><br><p class="comments mt-2"> 10 comments</p></a>
-                  <a href="#" class="listings1 p-3 border-top">💡Free Clear Explanations of Fundamental Concepts in Software - in plain english with hand-drawn illustrations<span>education</span><br><p class="comments mt-2">6 comments</p></a>
+                <h4 class="p-3"><strong> #news</strong></h4>
+                <a href="#" class="listings1 p-3 border-top">PE offers limited scholarships from 1k to 4k for diversity
+                  and financial hardship<span>education</span><br>
+                  <p class="comments mt-2"> 36 comments</p>
+                </a>
+                <a href="#" class="listings1 p-3 border-top">Learn more than just ´coding´ Learn the entire design
+                  process:<span>education</span><br>
+                  <p class="comments mt-2"> 15 comments</p>
+                </a>
+                <a href="#" class="listings1 p-3 border-top">FCAL - Open source cross plaform calculator for
+                  programmers<span>collabs</span><br>
+                  <p class="comments mt-2"> 12 comments</p>
+                </a>
+                <a href="#" class="listings1 p-3 border-top">QA Platform Engineer<span>jobs</span><br>
+                  <p class="comments mt-2"> 10 comments</p>
+                </a>
+                <a href="#" class="listings1 p-3 border-top">💡Free Clear Explanations of Fundamental Concepts in
+                  Software - in plain english with hand-drawn illustrations<span>education</span><br>
+                  <p class="comments mt-2">6 comments</p>
+                </a>
               </ul>
-          </div>
-            
+            </div>
+
 
 
           </div>
@@ -967,7 +1013,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
     crossorigin="anonymous"></script>
-  <script src="./js/library/moment.min.js" ></script>
+  <script src="./js/library/moment.min.js"></script>
   <script src="js/main.js"></script>
   <script src="js/write-post.js"></script>
   <!--Aqui-->
