--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   <input type="text" placeholder="Search..." class="ml-5 search-bar">
              </div>
              <div class="right">
-                 <button class="btn mr-3"><strong> Write a post</strong></button> 
+                 <a href="/write-post.html"><button class="btn mr-3"><strong> Write a post</strong></button></a> 
                  <a href=""> <img src="/images/header/connect.svg" alt="connect ml-3"></a>
                  <a href=""> <img src="/images/header/bell.svg" alt="bell" class="ml-3"></a>
                  <div class="dropdown">
@@ -52,7 +52,7 @@
                          <a href="#">NajeraDev <br> @najeradev</a>
                          <a href="#">Dashboard</a>
                          <a href="#">Write a Post</a>
-                         <a href="#">Reading list</a>
+                         <a href="/readinglist.html">Reading list</a>
                          <a href="#">Settings</a>
                          <a href="#">Key Links</a>
                          <a href="#">Sign Out</a>
@@ -84,7 +84,7 @@
               </div>
             </div>
             <div class="d-flex flex-column icon-list aside-izq">
-              <a href="#" class="list-aside">
+              <a href="/readinglist.html" class="list-aside">
                 <span class="">
                   <img src="images/aside1/losbuenos/drawer.svg " alt="">
                 </span>
@@ -1013,7 +1013,7 @@
         <div class="d-flex flex-column">
           <a class="a-f" href="https://kodemia.mx/" target="_blank">Terms of use</a>
           <a class="a-f" href="https://kodemia.mx/" target="_blank">Contac</a>
-          <a class="a-f" href="https://kodemia.mx/" target="_blank"> <b>Write a post</b></a>
+          <a class="a-f" href="/write-post.html" target="_blank"> <b>Write a post</b></a>
         </div>
       </div>
       <img class="d-none d-lg-block perezoso" src="images/changuito.png" alt="">
