--- a/readinglist.html
+++ b/readinglist.html
@@ -81,18 +81,14 @@
                         </div>
                   </div>
                   <div class="col-8">
-                        <main>
-                            <div>
-                                <main class="p-3">
-                                    <article>
-                                        <p>Imagen y texto de post de interes</p> 
-                                    </article>
-                                    <article>
-                                        <p>Imagen y texto de post de interes 2</p>
-                                    </article>
-                                </main>
-                            </div>
-                        </main>
+                    <main class="p-3" id="savedCards">
+                      <article>
+                          <p>Imagen y texto de post de interes</p> 
+                      </article>
+                      <article>
+                          <p>Imagen y texto de post de interes 2</p>
+                      </article>
+                  </main>
                     </div>
                 </div>
             </div>
@@ -158,6 +154,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
     crossorigin="anonymous"></script>
+    <script src="/js/library/moment.min.js"></script>
   <script src="/js/readinglist.js"></script>
   
   <!--Aqui-->
