--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </a>
       <form class="form-inline flex-grow-1 mr-1 mr-lg-5">
         <input type="hidden" name="utf8" id="" placeholder="" autocomplete="" value="✓">
-        <input class="form-control w-100" type="search" placeholder="Search..." aria-label="Search">
+        <input data-search id="searchId" class="form-control w-100" type="search" placeholder="Search..." aria-label="Search">
       </form>
       <a href="write-post.html">
         <button type="button "
@@ -982,13 +982,8 @@
 
         <div class="d-flex flex-column">
           <a class="a-f" href="https://kodemia.mx/" target="_blank">Terms of use</a>
-<<<<<<< HEAD
           <a class="a-f" href="https://kodemia.mx/" target="_blank">Contac</a>
           <a class="a-f" href="/write-post.html" target="_blank"> <b>Write a post</b></a>
-=======
-          <a class="a-f" href="https://kodemia.mx/" target="_blank">Contact</a>
-          <a class="a-f" href="https://kodemia.mx/" target="_blank"> <b>Write a post</b></a>
->>>>>>> master
         </div>
       </div>
       <img class="d-none d-lg-block perezoso" src="images/changuito.png" alt="">
@@ -1006,6 +1001,7 @@
   <script src="./js/library/moment.min.js"></script>
   <script src="js/main.js"></script>
   <script src="js/write-post.js"></script>
+  <script src="js/search.js"></script>
   <!--Aqui-->
 
 </body>
