changes on search

--- a/readinglist.html
+++ b/readinglist.html
@@ -81,7 +81,7 @@
             </div>
           </div>
           <div class="col-9">
-            <main class="p-3" id="savedCards">
+            <main class="p-3 m-4" id="savedCards">
               <article>
                 <p>Imagen y texto de post de interes</p>
               </article>
