--- a/readinglist.html
+++ b/readinglist.html
@@ -17,12 +17,12 @@
   <!-- Este es el elemento fixed (header) -->
   <nav class="navbar fixed-top navbar-light bg-light shadow-sm p-1 mb-5 bg-white rounded">
     <div class="container nav-top">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <i class="pl-1 fab fa-dev" title="dev"></i>
       </a>
       <form class="form-inline flex-grow-1 mr-1 mr-lg-5">
         <input type="hidden" name="utf8" id="" placeholder="" autocomplete="" value="✓">
-        <input class="form-control w-100" type="search" placeholder="Search..." aria-label="Search">
+        <input class="form-control w-100" id="searchReadingList" type="search" placeholder="Search..." aria-label="Search">
       </form>
       <a href="write-post.html">
         <button type="button "
@@ -156,6 +156,7 @@
     crossorigin="anonymous"></script>
   <script src="/js/library/moment.min.js"></script>
   <script src="/js/readinglist.js"></script>
+  <script src="/js/search.js"></script>
 
   <!--Aqui-->
 
