--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 </div>
 <!-- Aqui termina el modal del boton moneditas -->
   <!-- Este es el elemento fixed (header) -->
-  <div class="container-fluid header pl-0 pr-0 pt-0 top-header header-fluid fixed-top mt-0 mb-5 d-sm-none">
+  <div class="container-fluid header pl-0 pr-0 pt-0 top-header header-fluid fixed-top mt-0 mb-5 d-none d-md-block">
     <div class="row">
        <div class="container">
          <header class="d-flex justify-content-between mt-2">
