reading list css terminado

--- a/readinglist.html
+++ b/readinglist.html
@@ -60,28 +60,28 @@
           <div class="col-12">
             <header class="d-flex justify-content-between">
               <h1 class="h1-title-header">Reading list</h1>
-              <div>
-                <a>View archive</a>
-                <input placeholder="search">
+              <div class="mt-3 archiveAndSearch flex-items-center">
+                <button type="button" class="btn btn-light view-archive mr-1">View Archive</button>
+                <input class="readingListSearch" placeholder="  Search...">
               </div>
             </header>
           </div>
           <div class="col-3 tags-contnr">
             <div>
               <nav class="d-flex flex-column p-3">
-                <a>#angular</a>
-                <a>#firebase</a>
-                <a>#flatironschool</a>
-                <a>#genius</a>
-                <a>#javascript</a>
-                <a>#ruby</a>
-                <a>#typescript</a>
-                <a>#webdev</a>
+                <a class="mb-1 hashTags">&nbsp#angular</a>
+                <a class="mb-1 hashTags">&nbsp#firebase</a>
+                <a class="mb-1 hashTags">&nbsp#flatironschool</a>
+                <a class="mb-1 hashTags">&nbsp#genius</a>
+                <a class="mb-1 hashTags">&nbsp#javascript</a>
+                <a class="mb-1 hashTags">&nbsp#ruby</a>
+                <a class="mb-1 hashTags">&nbsp#typescript</a>
+                <a class="mb-1 hashTags">&nbsp#webdev</a>
               </nav>
             </div>
           </div>
           <div class="col-9">
-            <main class="p-3 m-4" id="savedCards">
+            <main class="pl-3 pr-3 pb-3 mt-3" id="savedCards">
               <article>
                 <p>Imagen y texto de post de interes</p>
               </article>
